fix layout issues

--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -1,4 +1,6 @@
-app-root {
-  display: block;
-  height: 100%;
+@import "node_modules/ng-zorro-antd/ng-zorro-antd.less";
+
+html,
+body {
+  height: unset;
 }
